--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -1,6 +1,6 @@
-// 
+//
 // Colors
-// 
+//
 
 // Pre-state grayscale colors used in other variables
 
@@ -8,7 +8,7 @@ $gray-800: #343a40;
 
 // Override Bootstrap color system
 
-$orange: #bd5d38;
+$orange: #3897bd;
 
 // Override Bootstrap default state colors
 
